...
                            android:layout_marginBottom="8dp"
                            android:textColorHint="#FF8A99AF">

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:id="@+id/vehicle_no"
                                android:drawablePadding="16dp"
                                android:fontFamily="@font/calibri"
                                android:hint="Vehicle Number"
                                android:inputType="text"
                                android:maxLines="1"
                                android:textColor="@android:color/black"
...
                    </LinearLayout>

                </androidx.cardview.widget.CardView>


                <Button
                    android:id="@+id/book_lots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    android:fontFamily="@font/calibri"
                    android:text="Book Lot"
...
