...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <GridView
            android:id="@+id/simpleGridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="4"
            android:horizontalSpacing="50dp"
            android:verticalSpacing="15dp"/>

...
